# ai-server

./: Dockerfile  README.md  pyproject.toml  shell.nix
.github/workflows/: build.yaml
ai_server/: app.py
ai_server/database/: database.py
ai_server/views/: inference.py  info.py  training.py
database/: db.sql
src/: app.py  config.py
src/database/: database.py
src/views/: inference.py  info.py  status.py  training.py
tests/: inference.py
