[tool.poetry]
name = "ai_server"
version = "0.1.0"
description = "A server to facilitate AI training and inference"
authors = ["Mitchell Gilmore <mgilm0re@bu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
celery = {extras = ["amqp"], version = "^5.4.0"}

[tool.poetry.scripts]
ai-server = 'src.app:run'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/*",
]
